[tool.poetry]
name = "piratepog"
version = "0.1.0"
description = "a python project"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://example.com"

[tool.poetry.scripts]
piratepog = "piratepog.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
